# tugas-migrasi-on-premise-ke-cloud

./: README.md  app.py  migration.sql  pyproject.toml  requirements.txt
api/: index.py
